--- a/src/public/modules/core/views/studentLogin.html
+++ b/src/public/modules/core/views/studentLogin.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div>
-            <a class="waves-effect waves-light btn" type="submit" ng-disabled="loginForm.$invalid" ng-click="ctrl.login(username, password)">Login</a>
+            <a class="waves-effect waves-light btn" type="submit" ng-disabled="loginForm.$invalid" ng-click="lCtrl.loginStudent(username, password)">Login</a>
             <a class="waves-effect waves-light red btn" ui-sref="register">Cancel</a>
         </div>
         <!-- ngMessages form validation -->
