--- a/src/public/modules/core/views/main.html
+++ b/src/public/modules/core/views/main.html
@@ -1,6 +1,6 @@
 <div class="" style="height: 100%;">
     <!-- Spaces top a bit -->
     <div class="spacer"></div>
-    <div ng-if="!ctrl.Auth.loggedIn" class="login" ng-include="'views/login.html'"></div>
+    <div ng-if="!ctrl.Auth.loggedIn" class="login" ng-include="'views/adminLogin.html'"></div>
     <div class="todo-container" ng-if="ctrl.Auth.loggedIn" ng-include="'views/todo.html'"></div>
 </div>
