Added a lot more

--- a/src/public/modules/admin/css/admin-main.css
+++ b/src/public/modules/admin/css/admin-main.css
@@ -201,12 +201,19 @@ md-list-item>div {
 /* Faculty styles */
 
 .faculty-list {
-    height: 87%;
+    height: 90vh;
+    min-width: 25vw;
     overflow-y: auto;
     border-right: 1px solid #E1E1E1;
     margin: 0.5em;
     height: 59em;
     box-shadow: 1px 2px 6px gray;
+}
+
+.faculty-listy {
+    overflow-y: scroll;
+    min-width: inherit;
+    max-height: 68vh;
 }
 
 .faculty-modal {
@@ -220,6 +227,26 @@ md-list-item>div {
 
 .faculty-list {
     box-shadow: 1px 2px 6px gray;
+}
+
+.faculty-details {
+    min-width: 73vw;
+    max-height: 89vh;
+    margin-top: 7px;
+    padding: 4%;
+}
+
+.faculty-section-title {
+    margin-bottom: 2%;
+}
+
+.faculty-info {
+    margin: inherit;
+    margin-bottom: 5%;
+}
+
+.course-list {
+    margin-top: 15px;
 }
 
 
