--- a/src/public/modules/admin/views/sidenav.html
+++ b/src/public/modules/admin/views/sidenav.html
@@ -7,13 +7,13 @@
         <md-menu-item>
             <md-button ng-click="ctrl.selectView('admissions')">
                 <i class="fa fa-users md-menu-icon"></i>
-                <p class="md-menu-text">Admissions</p>
+                <p class="md-menu-text">Summary</p>
             </md-button>
         </md-menu-item>
         <md-menu-item>
             <md-button ng-click="ctrl.selectView('reviews')">
                 <i class="fa fa-search md-menu-icon"></i>
-                <p class="md-menu-text">Reviews</p>
+                <p class="md-menu-text">Student Management</p>
             </md-button>
         </md-menu-item>
         <md-menu-item>
@@ -31,20 +31,7 @@
         <md-menu-item>
             <md-button ng-click="ctrl.selectView('summary')">
                 <i class="fa fa-file-text-o md-menu-icon"></i>
-                <p class="md-menu-text">Summary</p>
-            </md-button>
-        </md-menu-item>
-        <div class="div-ider"></div>
-        <md-menu-item>
-            <md-button ng-click="ctrl.openSecretDialog()">
-                <i class="fa fa-unlock md-menu-icon"></i>
-                <p class="md-menu-text">Set Secret</p>
-            </md-button>
-        </md-menu-item>
-        <md-menu-item>
-            <md-button ng-click="ctrl.logout()">
-                <i class="fa fa-sign-out md-menu-icon"></i>
-                <p class="md-menu-text">Log Out</p>
+                <p class="md-menu-text">Course TA Management</p>
             </md-button>
         </md-menu-item>
     </md-content>
